# go-project-template

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  buf.gen.yaml  go.mod
api/model/v1/: model.proto
deploy/docker/: Dockerfile
