load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/epsxy/go-project-template
gazelle(name = "gazelle")

go_library(
    name = "go-project-template_lib",
    srcs = ["main.go"],
    importpath = "github.com/epsxy/go-project-template",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-project-template",
    embed = [":go-project-template_lib"],
    visibility = ["//visibility:public"],
)
